@@ -18,6 +18,7 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
@@ -31,7 +32,6 @@ public class CartServiceImpl implements CartService {
     private final ModelMapper modelMapper;
 
 
-    @Override
     public CartDTO addProductToCart(Long productId, Integer quantity) {
         Cart cart = createCart();
 
@@ -87,16 +87,29 @@ public class CartServiceImpl implements CartService {
 
     @Override
     public List<CartDTO> getAllCarts() {
-        List<Cart> cart = cartRepository.findAll();
-        if (cart.isEmpty()) {
-            throw new APIException("No cart exist");
+        List<Cart> carts = cartRepository.findAll();
+
+        if (carts.size() == 0) {
+            throw new APIException("No cart exists");
         }
-        return cart.stream().map(item -> {
-            CartDTO cartDTO = modelMapper.map(item, CartDTO.class);
-            List<ProductDTO> productDTOS = item.getCartItems().stream().map(p -> modelMapper.map(p.getProduct(), ProductDTO.class)).toList();
-            cartDTO.setProducts(productDTOS);
+
+        List<CartDTO> cartDTOs = carts.stream().map(cart -> {
+            CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
+
+            List<ProductDTO> products = cart.getCartItems().stream().map(cartItem -> {
+                ProductDTO productDTO = modelMapper.map(cartItem.getProduct(), ProductDTO.class);
+                productDTO.setQuantity(cartItem.getQuantity()); // Set the quantity from CartItem
+                return productDTO;
+            }).collect(Collectors.toList());
+
+
+            cartDTO.setProducts(products);
+
             return cartDTO;
-        }).toList();
+
+        }).collect(Collectors.toList());
+
+        return cartDTOs;
     }
 
     @Override
@@ -106,27 +119,32 @@ public class CartServiceImpl implements CartService {
             throw new ResourceNotFoundException("Cart", "cartId", cartId);
         }
         CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
-        cart.getCartItems().forEach(c -> c.getProduct().setQuantity(c.getQuantity()));
-        List<ProductDTO> products =
-                cart.getCartItems()
-                        .stream()
-                        .map(i -> modelMapper.map(i.getProduct(), ProductDTO.class))
-                        .toList();
+        cart.getCartItems().forEach(c ->
+                c.getProduct().setQuantity(c.getQuantity()));
+        List<ProductDTO> products = cart.getCartItems().stream()
+                .map(p -> modelMapper.map(p.getProduct(), ProductDTO.class))
+                .toList();
         cartDTO.setProducts(products);
         return cartDTO;
     }
 
-    @Override
     @Transactional
+    @Override
     public CartDTO updateProductQuantityInCart(Long productId, Integer quantity) {
-        String loggedInEmail = authUtil.loggedInEmail();
-        Cart userCart = cartRepository.findCartByEmail(loggedInEmail);
+
+        String emailId = authUtil.loggedInEmail();
+        Cart userCart = cartRepository.findCartByEmail(emailId);
         Long cartId = userCart.getCartId();
 
         Cart cart = cartRepository.findById(cartId)
                 .orElseThrow(() -> new ResourceNotFoundException("Cart", "cartId", cartId));
+
         Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new ResourceNotFoundException("Product", "productId", productId));
+
+        if (product.getQuantity() == 0) {
+            throw new APIException(product.getProductName() + " is not available");
+        }
 
         if (product.getQuantity() < quantity) {
             throw new APIException("Please, make an order of the " + product.getProductName()
@@ -134,28 +152,47 @@ public class CartServiceImpl implements CartService {
         }
 
         CartItem cartItem = cartItemRepository.findCartItemByProductIdAndCartId(cartId, productId);
+
         if (cartItem == null) {
-            throw new APIException("Product " + product.getProductName() + " not available in the cart");
+            throw new APIException("Product " + product.getProductName() + " not available in the cart!!!");
         }
-        cartItem.setProductPrice(product.getSpecialPrice());
-        cartItem.setQuantity(cartItem.getQuantity() + quantity);
-        cartItem.setDiscount(product.getDiscount());
-        cart.setTotalPrice(cart.getTotalPrice() + (cartItem.getProductPrice() * quantity));
-        cartRepository.saveAndFlush(cart);
-        CartItem updatedItem = cartItemRepository.saveAndFlush(cartItem);
+
+        // Calculate new quantity
+        int newQuantity = cartItem.getQuantity() + quantity;
+
+        // Validation to prevent negative quantities
+        if (newQuantity < 0) {
+            throw new APIException("The resulting quantity cannot be negative.");
+        }
+
+        if (newQuantity == 0) {
+            deleteProductFromCart(cartId, productId);
+        } else {
+            cartItem.setProductPrice(product.getSpecialPrice());
+            cartItem.setQuantity(cartItem.getQuantity() + quantity);
+            cartItem.setDiscount(product.getDiscount());
+            cart.setTotalPrice(cart.getTotalPrice() + (cartItem.getProductPrice() * quantity));
+            cartRepository.save(cart);
+        }
+
+        CartItem updatedItem = cartItemRepository.save(cartItem);
         if (updatedItem.getQuantity() == 0) {
             cartItemRepository.deleteById(updatedItem.getCartItemId());
         }
+
+
         CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
+
         List<CartItem> cartItems = cart.getCartItems();
-        Stream<ProductDTO> productDTOStream = cartItems.stream().map(
-                item -> {
-                    ProductDTO prd = modelMapper.map(item.getProduct(), ProductDTO.class);
-                    prd.setQuantity(item.getQuantity());
-                    return prd;
-                }
-        );
-        cartDTO.setProducts(productDTOStream.toList());
+
+        Stream<ProductDTO> productStream = cartItems.stream().map(item -> {
+            ProductDTO prd = modelMapper.map(item.getProduct(), ProductDTO.class);
+            prd.setQuantity(item.getQuantity());
+            return prd;
+        });
+
+
+        cartDTO.setProducts(productStream.toList());
 
         return cartDTO;
     }
@@ -176,6 +213,27 @@ public class CartServiceImpl implements CartService {
         return result;
     }
 
+    @Override
+    public void updateProductInCarts(Long cartId, Long productId) {
+
+        Cart cart = cartRepository.findById(cartId)
+                .orElseThrow(() -> new ResourceNotFoundException("Cart", "cartId", cartId));
+
+        Product product = productRepository.findById(productId)
+                .orElseThrow(() -> new ResourceNotFoundException("Product", "productId", productId));
+
+        CartItem cartItem = cartItemRepository.findCartItemByProductIdAndCartId(cartId, productId);
+        if (cartItem == null) {
+            throw new APIException("Product " + product.getProductName() + " not available");
+        }
+        double cartPrice = cart.getTotalPrice() - (cartItem.getProductPrice() * cartItem.getQuantity());
+
+        cartItem.setProductPrice(product.getSpecialPrice());
+        cart.setTotalPrice(cartPrice + (cartItem.getProductPrice() * cartItem.getQuantity()));
+        cartItem = cartItemRepository.save(cartItem);
+
+    }
+
 
     private Cart createCart() {
         Cart userCart = cartRepository.findCartByEmail(authUtil.loggedInEmail());
@@ -189,15 +247,4 @@ public class CartServiceImpl implements CartService {
         return newCart;
     }
 
-    private static void validations(Integer quantity, CartItem cartItem, Product product) {
-        if (cartItem != null) {
-            throw new APIException("Product " + product.getProductName() + " already exists in the cart");
-        }
-        if (product.getQuantity() == 0) {
-            throw new APIException(product.getProductName() + " Product is not available");
-        }
-        if (product.getQuantity() < quantity) {
-            throw new APIException("Please, make an order of the " + product.getProductName() + " less than or equal to the quantity" + product.getQuantity() + ".");
-        }
-    }
 }
